--- a/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj
+++ b/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj
@@ -145,7 +145,19 @@
     <ClInclude Include="..\common\imgui\imstb_truetype.h" />
     <ClInclude Include="SampleMSAAApp.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\03_HelloGeometryShader\packages\glfw.3.3.2\build\native\glfw.targets" Condition="Exists('..\03_HelloGeometryShader\packages\glfw.3.3.2\build\native\glfw.targets')" />
+    <Import Project="..\03_HelloGeometryShader\packages\glm.0.9.9.800\build\native\glm.targets" Condition="Exists('..\03_HelloGeometryShader\packages\glm.0.9.9.800\build\native\glm.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>このプロジェクトは、このコンピューター上にない NuGet パッケージを参照しています。それらのパッケージをダウンロードするには、[NuGet パッケージの復元] を使用します。詳細については、http://go.microsoft.com/fwlink/?LinkID=322105 を参照してください。見つからないファイルは {0} です。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\03_HelloGeometryShader\packages\glfw.3.3.2\build\native\glfw.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\03_HelloGeometryShader\packages\glfw.3.3.2\build\native\glfw.targets'))" />
+    <Error Condition="!Exists('..\03_HelloGeometryShader\packages\glm.0.9.9.800\build\native\glm.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\03_HelloGeometryShader\packages\glm.0.9.9.800\build\native\glm.targets'))" />
+  </Target>
 </Project>
