--- a/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj
+++ b/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj
@@ -128,7 +128,7 @@
     <ClCompile Include="..\common\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\common\imgui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="SampleMSAAApp.cpp" />
+    <ClCompile Include="HelloGeometryShaderApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\commonSutraCopy\Swapchain.h" />
@@ -143,7 +143,7 @@
     <ClInclude Include="..\common\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\common\imgui\imstb_textedit.h" />
     <ClInclude Include="..\common\imgui\imstb_truetype.h" />
-    <ClInclude Include="SampleMSAAApp.h" />
+    <ClInclude Include="HelloGeometryShaderApp.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
