・シェーダファイルはShaderフォルダとフィルタに入れるようにした ・シェーダコンパイルは手動でなく、VSのビルド時に更新があったら走らせるようにした

--- a/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj.filters
+++ b/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="ヘッダー ファイル\imgui">
       <UniqueIdentifier>{901417dc-309e-49ae-8cd8-65de8fd9088d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader">
+      <UniqueIdentifier>{fdc21d92-c2b5-4918-a17e-cee5df7b0c23}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -101,5 +104,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="Shader\shaderFS.frag">
+      <Filter>Shader</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Shader\shaderVS.vert">
+      <Filter>Shader</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
