Lambertシェーディングのモードで法線をLineで描画するようにした

--- a/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj.filters
+++ b/03_HelloGeometryShader_SutraCopy/03_HelloGeometryShader_SutraCopy.vcxproj.filters
@@ -121,5 +121,14 @@
     <CustomBuild Include="Shader\flatGS.geom">
       <Filter>Shader</Filter>
     </CustomBuild>
+    <CustomBuild Include="Shader\drawNormalVS.vert">
+      <Filter>Shader</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Shader\drawNormalGS.geom">
+      <Filter>Shader</Filter>
+    </CustomBuild>
+    <CustomBuild Include="Shader\drawNormalFS.frag">
+      <Filter>Shader</Filter>
+    </CustomBuild>
   </ItemGroup>
 </Project>
