--- a/04_CubemapRendering_SutraCopy/04_CubemapRendering_SutraCopy.vcxproj.filters
+++ b/04_CubemapRendering_SutraCopy/04_CubemapRendering_SutraCopy.vcxproj.filters
@@ -78,6 +78,12 @@
     <ClCompile Include="..\common\imgui\examples\imgui_impl_vulkan.cpp">
       <Filter>ソース ファイル\imgui</Filter>
     </ClCompile>
+    <ClCompile Include="..\commonSutraCopy\Swapchain.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\commonSutraCopy\VulkanAppBase.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -109,6 +115,18 @@
     </ClInclude>
     <ClInclude Include="..\common\imgui\imstb_truetype.h">
       <Filter>ヘッダー ファイル\imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\commonSutraCopy\Swapchain.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\commonSutraCopy\TeapotModel.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\commonSutraCopy\VulkanAppBase.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\commonSutraCopy\VulkanBookUtil.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
