--- a/06_TessellateTeapot_SutraCopy/06_TessellateTeapot_SutraCopy.vcxproj.filters
+++ b/06_TessellateTeapot_SutraCopy/06_TessellateTeapot_SutraCopy.vcxproj.filters
@@ -102,4 +102,7 @@
       <Filter>ヘッダー ファイル\imgui</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
 </Project>
